--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy:ghp": "ng build ---base-href='https://jpb-sf.github.io/ngtest/' && sudo ngh" 
+    "deploy:gh": "ng build ---base-href='https://jpb-sf.github.io/ngtest2/' && sudo ngh" 
   },
   "private": true,
   "dependencies": {
